--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "mongoose": "^7.6.1"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "morgan": "^1.10.0"
   }
 }
