--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,7 @@
   "extends": ["prettier"],
   "plugins": ["prettier"],
   "rules": {
-    "no-unused-vars": "off",
+    // "no-unused-vars": "off",
     "prettier/prettier": "warn"
   }
 }
